# CM-LIRV

./: CMakeLists.txt  README.md  package.xml
exe/: main.cpp
include/spline/core/: trajectory.h
tool/: spline_main.cpp
